# snapedit

./: Cargo.toml  LICENSE  README.md  spec.md
.cargo/: config.toml
src/: app.rs  capture.rs  document.rs  export.rs  main.rs  output.rs
